# brave-core

android/: brave_java_sources.gni
app/: brave_main_delegate.cc  brave_main_delegate_browsertest.cc  generated_resources.grd  settings_strings.grdp
browser/: BUILD.gn  brave_profile_prefs_browsertest.cc  brave_tab_helpers.cc
browser/brave_shields/: ad_block_service_browsertest.cc
components/brave_webtorrent/browser/: BUILD.gn
components/brave_webtorrent/browser/net/: BUILD.gn
components/ephemeral_storage/browser/: BUILD.gn  ephemeral_storage_web_contents_observer.cc  ephemeral_storage_web_contents_observer.h
components/greaselion/browser/: BUILD.gn  greaselion_service_impl.cc
components/signin/internal/identity_manager/: BUILD.gn  brave_mutable_profile_oauth2_token_service_delegate.cc  brave_mutable_profile_oauth2_token_service_delegate.h
patches/: base-android-java-src-org-chromium-base-CommandLine.java.patch  chrome-VERSION.patch  chrome-browser-about_flags.cc.patch  chrome-browser-resources-settings-people_page-sync_account_control.html.patch  components-omnibox-browser-BUILD.gn.patch  components-services-storage-dom_storage-session_storage_impl.h.patch  components-services-storage-dom_storage-session_storage_namespace_impl.h.patch  components-translate-core-browser-BUILD.gn.patch  content-browser-browser_context.cc.patch  content-browser-browser_interface_binders.cc.patch  content-browser-frame_host-navigation_request.cc.patch  content-browser-frame_host-render_frame_host_impl.cc.patch  content-browser-frame_host-render_frame_host_impl.h.patch  content-browser-renderer_host-render_process_host_impl.cc.patch  content-browser-renderer_host-render_process_host_impl.h.patch  content-browser-storage_partition_impl_map.cc.patch  content-browser-storage_partition_impl_map.h.patch  content-browser-web_contents-web_contents_impl.cc.patch  content-public-browser-browser_context.h.patch  extensions-browser-BUILD.gn.patch  media-base-BUILD.gn.patch  third_party-blink-renderer-core-core_initializer.h.patch  third_party-blink-renderer-core-page-create_window.cc.patch  third_party-blink-renderer-modules-modules_initializer.cc.patch  third_party-blink-renderer-modules-modules_initializer.h.patch  third_party-blink-renderer-modules-service_worker-service_worker_container.cc.patch  third_party-blink-renderer-modules-storage-dom_window_storage.cc.patch  third_party-blink-renderer-modules-storage-inspector_dom_storage_agent.cc.patch  third_party-blink-renderer-modules-storage-storage_controller.cc.patch  third_party-blink-renderer-modules-storage-storage_controller.h.patch  third_party-blink-renderer-modules-storage-storage_namespace.cc.patch  third_party-blink-renderer-modules-storage-storage_namespace.h.patch  third_party-widevine-cdm-BUILD.gn.patch
test/: BUILD.gn
(+65 files in other folders)
