import("//brave/components/brave_webtorrent/browser/buildflags/buildflags.gni")

source_set("browser") {
  # Remove when https://github.com/brave/brave-browser/issues/10649 is resolved
  check_includes = false
  sources = [
    "content_browser_client_helper.h",
    "webtorrent_util.cc",
    "webtorrent_util.h",
  ]

  deps = [
    "//base",
    "//brave/common",
    "//components/pref_registry",
    "//components/prefs",
    "//content/public/browser",
    "//net",
  ]

  if (enable_extensions) {
    deps += [
     "//extensions/browser",
     "//extensions/common",
    ]
  }

  public_deps = [
    "buildflags",
  ]
}
