source_set("browser") {
  sources = [
    "ephemeral_storage_web_contents_observer.cc",
    "ephemeral_storage_web_contents_observer.h",
  ]

  deps = [
    "//base",
    "//chrome/common",
    "//content/public/browser",
    "//mojo/public/cpp/bindings",
    "//third_party/blink/public/mojom:mojom_platform_headers",
    "//url",

  ]
}
