import("//brave/build/config.gni")

source_set("browser") {
  sources = [
    "greaselion_download_service.cc",
    "greaselion_download_service.h",
    "greaselion_service.h",
    "greaselion_service_impl.cc",
    "greaselion_service_impl.h",
    "switches.cc",
    "switches.h",
  ]

  deps = [
    "//base",
    "//brave/components/brave_component_updater/browser",
    "//chrome/browser/extensions:extensions",
    "//chrome/common",
    "//content/public/browser",
    "//content/public/common",
    "//extensions/browser:browser_sources",
    "//url",
  ]

  public_deps = [
    "buildflags"
  ]

}
